# rsloop

./: Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml  wheels.yml
docs/: asyncio-compat-gaps.md  development.md  getting-started.md
python/rsloop/: __init__.py  _loop_compat.py  _run.py
src/: fast_streams.rs  loop_core.rs  process_transport.rs  python_api.rs  stream_transport.rs
src/python_api/: pre_exec.rs
tests/: test_compat.py  test_run.py
tests/cpython/: __init__.py  conftest.py
tests/cpython/support/: __init__.py  script_helper.py  socket_helper.py  threading_helper.py  warnings_helper.py
tests/cpython/test_asyncio/: conftest.py
