[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rsloop"
version = "0.1.21"
description = "An event loop for asyncio written in Rust"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Yehor Smoliakov <egorsmkv@gmail.com>" },
]
keywords = ["asyncio", "event-loop", "pyo3", "python", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/RustedBytes/rsloop"
Repository = "https://github.com/RustedBytes/rsloop"
Issues = "https://github.com/RustedBytes/rsloop/issues"

[tool.maturin]
python-source = "python"
module-name = "rsloop._loop"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "mkdocs>=1.6.1",
    "ruff>=0.15.19",
    "rust-just>=1.54.0",
    { include-group = "test" },
]
# Dependencies for the library/framework tests in tests/packages
test = [
    "aiohttp>=3.10.11",
    "django>=4.2.30",
    "falcon>=4.1.0",
    "fastapi>=0.124.4",
    "faststream[nats]>=0.5.48",
    "granian>=1.6.4",
    "hypercorn>=0.17.3",
    "litestar>=2.24.0",
    "pytest>=8.3.5",
    "quart>=0.19.9",
    "sanic>=23.12.1,<24; python_version < '3.9'",
    "sanic>=25.3.0; python_version >= '3.9'",
    "starlette>=0.44.0",
    "tracerite<1.1; python_version < '3.9'",
    "uvicorn>=0.33.0",
]
